rudimentary topN pushdown support for mongoDB